logdocker: Fix infinite tail recursion with multiple windows

Only store the previous message handler returned from the first time
calling qInstallMessageHandler. Calls to qInstallMessageHandler from the
second window will return the same message handler that we set ourself,
which makes an infinite recursion.

Amends 17ab9bae5c78ab7742c41a0776287098b7495170

BUG:474431